src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/NVVertexBufferUnifiedMemory_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVVertexBufferUnifiedMemory_StringErrorContext.class */
public final class NVVertexBufferUnifiedMemory_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glBufferAddressRangeNV(IIJJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVVertexBufferUnifiedMemoryErrorContext");
        methods.put("glVertexFormatNV(III)V", "net/labymod/core/laby3d/opengl/error/generated/NVVertexBufferUnifiedMemoryErrorContext");
        methods.put("glNormalFormatNV(II)V", "net/labymod/core/laby3d/opengl/error/generated/NVVertexBufferUnifiedMemoryErrorContext");
        methods.put("glColorFormatNV(III)V", "net/labymod/core/laby3d/opengl/error/generated/NVVertexBufferUnifiedMemoryErrorContext");
        methods.put("glIndexFormatNV(II)V", "net/labymod/core/laby3d/opengl/error/generated/NVVertexBufferUnifiedMemoryErrorContext");
        methods.put("glTexCoordFormatNV(III)V", "net/labymod/core/laby3d/opengl/error/generated/NVVertexBufferUnifiedMemoryErrorContext");
        methods.put("glEdgeFlagFormatNV(I)V", "net/labymod/core/laby3d/opengl/error/generated/NVVertexBufferUnifiedMemoryErrorContext");
        methods.put("glSecondaryColorFormatNV(III)V", "net/labymod/core/laby3d/opengl/error/generated/NVVertexBufferUnifiedMemoryErrorContext");
        methods.put("glFogCoordFormatNV(II)V", "net/labymod/core/laby3d/opengl/error/generated/NVVertexBufferUnifiedMemoryErrorContext");
        methods.put("glVertexAttribFormatNV(IIIZI)V", "net/labymod/core/laby3d/opengl/error/generated/NVVertexBufferUnifiedMemoryErrorContext");
        methods.put("glVertexAttribIFormatNV(IIII)V", "net/labymod/core/laby3d/opengl/error/generated/NVVertexBufferUnifiedMemoryErrorContext");
        methods.put("nglGetIntegerui64i_vNV(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVVertexBufferUnifiedMemoryErrorContext");
        methods.put("glGetIntegerui64i_vNV(IILjava/nio/LongBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVVertexBufferUnifiedMemoryErrorContext");
        methods.put("glGetIntegerui64iNV(II)J", "net/labymod/core/laby3d/opengl/error/generated/NVVertexBufferUnifiedMemoryErrorContext");
        methods.put("glGetIntegerui64i_vNV(II[J)V", "net/labymod/core/laby3d/opengl/error/generated/NVVertexBufferUnifiedMemoryErrorContext");
        return methods;
    }
}
